--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 steps:
   - label: ":rspec: RSpec"
     depends_on: linting
-    command: bundle exec rspec
+    command: bundle exec rspec --profile
     artifact_paths: "log/rspec-*.xml"
     key: "rspec"
     env:
@@ -9,6 +9,18 @@ steps:
     plugins:
       - docker-compose#v3.0.0:
           run: app
+          env:
+            - BUILDKITE_JOB_ID
+            - CI
+            - RAILS_ENV
+
+  - label: ":spider: muffet"
+    command: muffet -v http://app:3000/docs --max-connections=10 --include=/docs/ --exclude=https://github.com/buildkite/docs/ --color=always
+    env:
+      RAILS_ENV: test
+    plugins:
+      - docker-compose#v3.0.0:
+          run: muffet
           env:
             - BUILDKITE_JOB_ID
             - CI
